<resources>
    <string name="app_name">科大植物</string>
    <string name="introduction_default">no </string>
    <string name="title_home">
		主页
	</string>
    <string name="title_plants">
		图鉴
	</string>
    <string name="title_map">
		地图
	</string>
    <string name="title_my">
		我的
	</string>
    <string name="name">
		这是植物的名字
	</string>
    <string name="species">
		科属：
	</string>
    <string name="_species">
		这是植物的科属
	</string>
    <string name="feature">
		特征简介：
	</string>
    <string name="_feature">
		这是植物的特征简介
	</string>
    <string name="values">
		利用价值：
	</string>
    <string name="_values">
		这是植物的利用价值
	</string>
    <string name="location">
		物种分布
	</string>
    <string name="_location">
		这是植物的物种分布
	</string>
    <string name="supplement">
		其他：
	</string>
    <string name="_supplement">
		这是植物的其他信息
	</string>
    <string name="_1name">
		苏铁
	</string>
    <string name="_1species">
		苏铁科	苏铁属
	</string>
    <string name="_1feature">
		常绿木本。树干柱状，不分枝，有螺旋状排列的菱形叶柄残痕。羽状叶长75~l20厘米，羽状裂片达100对条形，厚革质，向上斜展微成“V”字形，边缘向下反卷，先端锐尖。雌雄异株；花序密被黄褐色绒毛；雄球花圆柱形；雌球花序扁球形，大抱子叶羽状裂。种子红色。花期6~7月，种子11月成熟。
	</string>
    <string name="_1values">
		因株形优美，四季常行，为优良的观赏树种。茎内淀粉可食用；叶和种子可入药。
	</string>
    <string name="_1location">
		西区图书馆门前有栽培。分布千我国南部地区。
	</string>
    <string name="_1supplement">
		在江淮地区，苏铁需在温室越冬，现因气候变暖和城市热岛效应，偶见姑天栽培。
	</string>
    <string name="_1nickname">
		暂无
	</string>
    <string name="_2name">
		银杏
	</string>
    <string name="_2species">
		银杏科	银杏属
	</string>
    <string name="_2feature">
		落叶乔木，喜光树种。枝近轮生，雄株主枝斜上伸展（雌株主枝常较水平开展）。叶扇形，顶端2裂，叶脉二歧状；叶在一年生长枝上螺旋状散生，在短枝上簇生。球花单性，雌雄异株；雄球花下垂，柔萸花序状，雌球花具长梗梗端常分两叉，每叉顶生1枚胚珠。花期3-4月，种子9~l0月成熟。
	</string>
    <string name="_2values">
		叶形独特，秋季叶色金黄而美丽，常栽培观赏。种子供食用及药用，肉质外种皮有毒。
	</string>
    <string name="_2location">
		校园常见。仅浙江天R山有野生。
	</string>
    <string name="_2supplement">
		“银杏”指种子未熟时外被白色蜡粉，像银色的杏子，树名由此而来。种子成熟后呈金黄色。实际上，银杏只有种子，无果实，是裸千植物。为中生代子遗的稀有树种，我国特有。
	</string>
    <string name="_2nickname">
		暂无
	</string>
    <string name="_3name">
		黑松
	</string>
    <string name="_3species">
		松科	松属
	</string>
    <string name="_3feature">
		乔木。冬芽灰白色。针叶2针一束，深绿色，有光泽，粗硬，长6~12厘米。雄球花聚生千新枝下部；雌球花单生或2~3枚聚生千新枝近顶端。球果熟时褐色，圆锥状卵圆形，有短梗，向下弯垂；中部种鳞卵状椭圆形，鳞盾微肥厚，横脊显著，鳞跻微凹，有短刺；种子有翅。花期牛5月，球果翌年10月成熟。
	</string>
    <string name="_3values">
		暂无。
	</string>
    <string name="_3location">
		西区第三教学楼旁栽培。原产下门本及朝鲜南部海岸地区。
	</string>
    <string name="_3supplement">
		东区石榴园栽植有火炬松，针叶常3针一束，长15~25厘米，粗壮刚硬，三棱形稍螺旋扭转，叶缘具微细锯齿；树脂逍2，中生；叶宿存3~4年。球果腋生，无梗，两个对生，鳞跻延伸成外突的尖刺。速生造林树种，生产木材和树脂。因路面硬化不透气，长势不良，建议校绿化部门对其加强管护。
	</string>
    <string name="_3nickname">
		白芽松
	</string>
    <string name="_4name">
		日本五针松
	</string>
    <string name="_4species">
		松科	松属
	</string>
    <string name="_4feature">
		乔木。幼树树皮平滑，一年生枝幼嫩时绿色，后呈黄褐色，密生淡黄色柔毛；冬芽卵圆形。针叶5针一束，微弯曲，长3.5-5.5厘米直径不到1毫米；叶鞘早落。球果卵圆形或卵状椭圆形，鳞跻凹下。种子为不规则倒卵圆形，近褐色，有翅。花期5月，球果翌年6月成熟。
	</string>
    <string name="_4values">
		因四季常青而作园林绿化观赏。
	</string>
    <string name="_4location">
		西区也西湖旁边及东区第五教学楼旁边有栽培。原产于日本。我国长江流域普遍引种栽培。
	</string>
    <string name="_4supplement">
		暂无。
	</string>
    <string name="_4nickname">
		日本五须松、五钗松
	</string>
    <string name="_5name">
		日本冷杉
	</string>
    <string name="_5species">
		松科	冷杉属
	</string>
    <string name="_5feature">
		常绿乔木。树皮裂成鳞片状。叶条形，长2~3 厘米，螺 旋状着生，基部扭仙排成两列，叶 尖微凹，中脉内凹，叶背具2 条气孔带。球果圆柱形，长 1炉 15厘米，成 熟时黄褐色或灰褐色，苞鳞外露，先端急尖； 种翅较种子为长。花期 4~5 月，球果成熟期 10 月。
	</string>
    <string name="_5values">
		因树姿优美，叶位整齐有序，四季常绿，为优良观赏树种。
	</string>
    <string name="_5location">
		东区图书馆东侧栽有1棵。原产于日本。我国大部分地区有栽培。
	</string>
    <string name="_5supplement">
		该种自1929年引入上海和南京。校园仅有1棵，建议加强保护和繁育。
	</string>
    <string name="_5nickname">
		暂无
	</string>
    <string name="_6name">
		雪松
	</string>
    <string name="_6species">
		松科	雪松属
	</string>
    <string name="_6feature">
		常绿乔木。枝平展。针形叶，在长枝上辐射状伸展，短枝上成簇生状，坚硬，浅绿色或深绿色。雄球花长卵圆形或椭圆状卵圆形，长2~3厘米。球果熟时红褐色，卵圆形或宽椭圆形，有短梗；苞鳞短小；种翅宽大。花期2~3月，球果翌年10月成熟。
	</string>
    <string name="_6values">
		终年常绿，树形优美，常作园林绿化观赏。可作木材。
	</string>
    <string name="_6location">
		校园常见行道树。原产千西亚。我国普遍引种栽培。
	</string>
    <string name="_6supplement">
		暂无。
	</string>
    <string name="_6nickname">
		香柏
	</string>
    <string name="_7name">
		杉木
	</string>
    <string name="_7species">
		杉科	杉木属
	</string>
    <string name="_7feature">
		常绿乔木。叶在主枝上辐射状伸展，侧枝的叶基部扭转成2列，披针形或条状披针形，通常微弯，呈濂状，革质，有光泽。雄球花圆锥状，通常40余枚簇生千枝顶；雌球花单生或2~3枚集生，绿色。球果卵圆形，熟时苞鳞革质，棕黄色，三角状卵形，先端有坚硬的刺状尖头，边缘有不规则的锯齿。花期4月，球果10月下旬成熟。
	</string>
    <string name="_7values">
		常作木材。树皮含单宁。
	</string>
    <string name="_7location">
		东区校史馆附近偶有栽培。分布于我国秦岭至淮河流域以南地区。
	</string>
    <string name="_7supplement">
		＂杉”为多音字，作物种名时，读“shan”。
	</string>
    <string name="_7nickname">
		刺杉、杉
	</string>
    <string name="_8name">
		水杉
	</string>
    <string name="_8species">
		杉科	水杉属
	</string>
    <string name="_8feature">
		落叶乔木。树干基部常膨大，树皮灰色、灰褐色，树冠尖塔形。叶条形，幼时绿色，排成2列，叶和种鳞均对生；侧生小枝连叶千冬季脱落。球果的种鳞盾形，木质，中央有一条横槽；种子扁平，周围有翅。花期2月下旬，球果11月成熟。
	</string>
    <string name="_8values">
		因树姿优美，环境适应性强，现广泛用于园林绿化。可作木材。
	</string>
    <string name="_8location">
		校园常见。湖北利川、湖南龙山等地有野生。为我国特有的古老珍贵树种。
	</string>
    <string name="_8supplement">
		暂无。
	</string>
    <string name="_8nickname">
		暂无
	</string>
    <string name="_9name">
		池杉
	</string>
    <string name="_9species">
		杉科	落羽杉属
	</string>
    <string name="_9feature">
		落叶乔木。树干基部膨大，树皮褐色，纵裂，枝条向上伸展，树冠呈圆锥形。叶钻形，在枝上螺旋状伸展。球果圆球形，熟时褐黄色。花期3---4月，球果10月成熟。
	</string>
    <string name="_9values">
		耐水湿，可用作低湿地的造林树种或作庭院树。可作木材。
	</string>
    <string name="_9location">
		多见于西区也西湖中，东区偶见栽培。原产千北美洲东南部。
	</string>
    <string name="_9supplement">
		秋冬季节叶变为橙黄色，极具观赏价值。
	</string>
    <string name="_9nickname">
		暂无
	</string>
    <string name="_10name">
		圆柏
	</string>
    <string name="_10species">
		柏科	刺柏属
	</string>
    <string name="_10feature">
		叶两型，深绿色；刺叶常3叶轮生，排列疏松；鳞叶交互对生或3叶轮生。雌雄异株。球果近圆球形，翌年成熟。
	</string>
    <string name="_10values">
		材质优良，坚硬耐腐；也可绿化观赏。
	</string>
    <string name="_10location">
		东区眼镜湖边和图书馆附近有栽培。分布于我国大部分地区。
	</string>
    <string name="_10supplement">
		暂无。
	</string>
    <string name="_10nickname">
		暂无
	</string>
    <string name="_11name">
		铺地柏
	</string>
    <string name="_11species">
		柏科	圆柏属
	</string>
    <string name="_11feature">
		常绿甸匐灌木。枝条沿地面扩展，密生小枝。刺形叶，3叶交叉轮生，条状披针形，先端渐尖成角质的锐尖头，基部具2白点。球果近球形，被臼粉，成熟时黑色，直径8~9毫米；有2~3粒种子，长约4毫米，有棱脊。
	</string>
    <string name="_11values">
		栽培作观赏树。
	</string>
    <string name="_11location">
		西区第三教学楼水池边和图书馆前花坛有栽培。原产于日本。
	</string>
    <string name="_11supplement">
		暂无。
	</string>
    <string name="_11nickname">
		暂无
	</string>
    <string name="_12name">
		北美圆柏
	</string>
    <string name="_12species">
		柏科	圆柏属
	</string>
    <string name="_12feature">
		暂无。
	</string>
    <string name="_12values">
		园林绿化。
	</string>
    <string name="_12location">
		校园常见栽培。原产于北美。
	</string>
    <string name="_12supplement">
		暂无。
	</string>
    <string name="_12nickname">
		暂无
	</string>
    <string name="_13name">
		美国香柏
	</string>
    <string name="_13species">
		柏科	崖柏属
	</string>
    <string name="_13feature">
		暂无。
	</string>
    <string name="_13values">
		因树形优美挺拔，四季常青，可净化空气，为绿化观赏的极品。木材耐腐，树枝可提炼柏油。
	</string>
    <string name="_13location">
		东区四牌楼路北侧多有栽培。原产于北美。我国华东地区有栽培。园艺品种较多。
	</string>
    <string name="_13supplement">
		暂无。
	</string>
    <string name="_13nickname">
		暂无
	</string>
    <string name="_14name">
		侧柏
	</string>
    <string name="_14species">
		柏科	侧柏属
	</string>
    <string name="_14feature">
		常绿乔木。生鳞叶的小枝细，向上直展或斜升，扁平，排成一平面。叶鳞形，小枝中央的叶的露出部分呈倒卵状菱形或斜方形。雄球花黄色，卵圆形，长约2毫米；雌球花近球形，蓝绿色，被白粉。球果近卵圆形，成熟后木质，开裂，红褐色；种子卵圆形或近椭圆形，灰褐色或紫褐色。花期3~4月，球果10月成熟。
	</string>
    <string name="_14values">
		常绿化栽培。可入药，也可作木材。
	</string>
    <string name="_14location">
		校园常见行道树。分布于我国大部分地区。
	</string>
    <string name="_14supplement">
		暂无。
	</string>
    <string name="_14nickname">
		暂无
	</string>
    <string name="_15name">
		柏木
	</string>
    <string name="_15species">
		柏科	柏木属
	</string>
    <string name="_15feature">
		常绿乔木。小枝细长下垂，生鳞叶的小枝扁平，排成一平面。鳞叶先端尖，中间的叶背部有条状腺点，两侧的叶对折，背部有棱脊。球果圆球形，直径8~12毫米，熟时暗褐色。花期3~5月，球果次年5~6月成熟。
	</string>
    <string name="_15values">
		树形优美，为优良绿化树种。材质优良。枝叶可提芳香油，并可入药。
	</string>
    <string name="_15location">
		东区老图书馆周围有栽培。为我国特有树种，分布于中部和西南等地。
	</string>
    <string name="_15supplement">
		暂无。
	</string>
    <string name="_15nickname">
		柏、柏树
	</string>
    <string name="_16name">
		日本花柏
	</string>
    <string name="_16species">
		柏科	扁柏属
	</string>
    <string name="_16feature">
		常绿乔木。树皮红褐色，裂成条状薄片脱落。小枝条扁平，排成一平面。鳞叶交替对生，先端锐尖，叶背基部密被白粉。球果圆球形，直径约6毫米，熟时暗褐色。花期4月，球果深秋成熟。
	</string>
    <string name="_16values">
		四季常青，为优良观赏树种。
	</string>
    <string name="_16location">
		东区石榴园凉亭旁有栽培。原产日本。我国部分地区有栽培。
	</string>
    <string name="_16supplement">
		暂无。
	</string>
    <string name="_16nickname">
		暂无
	</string>
    <string name="_17name">
		罗汉松
	</string>
    <string name="_17species">
		罗汉松科	罗汉松属
	</string>
    <string name="_17feature">
		常绿小乔木。叶螺旋状着生，条状披针形，微弯，上面深绿色，有光泽，下面带白色、灰绿色或淡绿色。雄球花穗状、腋生，常3~5枚簇生千极短的总梗上；雌球花单生叶腋，有梗。种子先端圆，熟时肉质假种皮紫黑色，有白粉，种托肉质圆柱形，红色或紫红色。花期4~5月，种子8勺月成熟。
	</string>
    <string name="_17values">
		常栽培作庭园观赏树。可作木材，种子、树皮、根皮可入药。
	</string>
    <string name="_17location">
		校园零散分布，西区第三教学楼附近较多。分布千长江以南等地。
	</string>
    <string name="_17supplement">
		因红色肉质种托似罗汉的装装，种子似罗汉的光脑袋，故名“罗汉松”。
	</string>
    <string name="_17nickname">
		罗汉杉
	</string>
    <string name="_18name">
		垂柳
	</string>
    <string name="_18species">
		杨柳科	柳属
	</string>
    <string name="_18feature">
		落叶乔木，树冠开展而疏散。枝细弱，下垂，淡褐黄色，无毛。叶狭披针形或线状披针形，上面绿色，下面色较淡，具细锯齿。花序先叶开放，或与叶同时开放；雄花序有短梗，雄蕊2枚；雌花序长2~3厘米，有梗。频果。花期3月，果期5月。
	</string>
    <string name="_18values">
		因树形优美，故可作绿化树种。可作木材。枝条可编筐，树皮含鞣质，可提制拷胶，叶可作饲料。
	</string>
    <string name="_18location">
		校园内常见。分布千长江流域与黄河流域。
	</string>
    <string name="_18supplement">
		种子上附着白色絮状物，因此种子成熟后可随风飞散如絮，即“柳絮"。”碧玉妆成一树高，万条垂下绿丝绛",形容的就是春天的垂柳。此外，东区第一教学楼南侧有一株柳属的落叶大乔木——腺柳（俗名“河柳＂），叶卵状椭圆形，幼叶具圆形托叶，早落；叶柄顶端和叶缘齿端具腺体；雄蕊常6枚。花果期3~5月。
	</string>
    <string name="_18nickname">
		水柳、仓丝柳
	</string>
    <string name="_19name">
		加杨
	</string>
    <string name="_19species">
		杨柳科	杨属
	</string>
    <string name="_19feature">
		落叶大乔木。叶三角形或三角状卵形，先端渐尖，基部截形或宽樑形，无或有1~2枚腺体，有圆锯齿，近基部较疏，具短缘毛；叶柄侧扁而长。雄花序长7~15厘米，花序轴光滑，每花有雄蕊15~25(~40)枚；苞片淡绿褐色，不整齐，丝状深裂，花盘淡黄绿色，全缘；雌花序有花45~50朵，柱头4裂。果序长20~25厘米；朔果卵圆形，2~3瓣裂。花期4月，果期5~6月。
	</string>
    <string name="_19values">
		可作行道树，但因春夏之交杨絮飞扬，建议少栽。可作木材。树皮含鞣质，可提制拷胶，也可作黄色染料。
	</string>
    <string name="_19location">
		西区东北角、东区东门附近、南区有栽培。我国各地均有引种栽培。
	</string>
    <string name="_19supplement">
		暂无。
	</string>
    <string name="_19nickname">
		加拿大杨
	</string>
    <string name="_20name">
		枫杨
	</string>
    <string name="_20species">
		胡桃科	枫杨属
	</string>
    <string name="_20feature">
		落叶乔木。叶常偶数羽状复叶，互生，叶轴具翅至翅不甚发达，小叶无柄，长椭圆形。花单性，雌雄同株；雄性栥荚花序腋生，雌性菜荚花序顶生。雌花几乎无梗。果序长20~30厘米；果翅狭，条形或阔条形。花期3月，果熟期8~9月。
	</string>
    <string name="_20values">
		现广泛栽植作园庭树或行道树。果实可作饲料，也可酿酒，种子可梓油。树皮和枝皮含鞣质，可提取拷胶，亦可作纤维原料。
	</string>
    <string name="_20location">
		东区和西区常见。分布于华中、华东和西南各地。
	</string>
    <string name="_20supplement">
		因果实有两翼，形似苍蝇，故俗称“苍蝇树”。
	</string>
    <string name="_20nickname">
		苍蝇树
	</string>
    <string name="_21name">
		美国山核桃
	</string>
    <string name="_21species">
		胡杨科	山核桃属
	</string>
    <string name="_21feature">
		落叶乔木。树皮粗糙、纵裂。奇数羽状复叶。雄柔芙花序几无总梗；雌穗状花序具2~6枚雌花。果实矩圆形，外果皮沛，具4棱，裂成4瓣，内果皮骨质光滑。花期5月，果9~11月成熟。
	</string>
    <string name="_21values">
		果仁含汕脂，可食。
	</string>
    <string name="_21location">
		东区眼镜湖旁有栽培。原产北美洲。
	</string>
    <string name="_21supplement">
		暂无。
	</string>
    <string name="_21nickname">
		薄壳山核桃
	</string>
    <string name="_22name">
		暂无
	</string>
    <string name="_22species">
		暂无
	</string>
    <string name="_22feature">
		落叶乔木。叶片长椭圆状披针形，先端渐尖，基部圆形或宽樑形，羽状脉直达叶缘凸出呈芒状锯齿，叶片两面同色。雄花序常数个集生千当年生枝下部叶腋；总苞碗形，直径1.5~2.2厘米；苞片钻形，反曲；坚果卵状球形；果跻隆起。花期3月下旬至4月，果实次年10月成熟。
	</string>
    <string name="_22values">
		木材坚硬。叶可养殖祚蚕。果实含淀粉，可食用。
	</string>
    <string name="_22location">
		郭沫若广场东南侧有栽培。分布千我国大部分地区。
	</string>
    <string name="_22supplement">
		暂无。
	</string>
    <string name="_22nickname">
		暂无
	</string>
</resources>