<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".introduction"
    android:padding="15dp">


    <ImageView
        android:id="@+id/intro_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/default_pic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:layout_below="@+id/intro_img">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/plantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/speciesIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plantName"
                android:text="@string/species"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plantSpecies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/speciesIcon"
                android:text="@string/_species"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/FeatureIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plantSpecies"
                android:text="@string/feature"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plantFeature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FeatureIcon"
                android:text="@string/_feature"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/valuesIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plantFeature"
                android:text="@string/values"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plantValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/valuesIcon"
                android:text="@string/_values"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/locationIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plantValues"
                android:text="@string/location"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plantLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locationIcon"
                android:text="@string/_location"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/supplementIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plantLocation"
                android:text="@string/supplement"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plantSupplement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/supplementIcon"
                android:text="@string/_supplement"
                android:textColor="#000000"
                android:textSize="20sp" />


            <!--            <TextView-->
            <!--                android:id="@+id/intr_tx"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:padding="30dp"-->
            <!--                android:text="@string/introduction_default"-->
            <!--                android:textSize="25sp" />-->



        </RelativeLayout>

    </ScrollView>


</RelativeLayout>